fix: word wrap bug

--- a/static/style.css
+++ b/static/style.css
@@ -37,7 +37,7 @@
 }
 
 body {
-  background-color: #FFFFF0;
+  background-color: white;
   margin: 0 auto;
   padding:  8em 1em 1em 1em;
   color: rgb(71, 71, 71);
@@ -46,6 +46,7 @@ body {
   line-height: var(--font-line-height);
   font-style:var(--font-style);
   width: min(95%, var(--column-width));
+  overflow-wrap: break-word;
 }
 
 a {
@@ -104,7 +105,6 @@ body > section > h1:nth-child(1) {
 .p-name {
     margin-top: 0.5rem;
     margin-bottom: 2.5rem;
-    cursor: pointer;
 }
 
 time sup {
@@ -233,7 +233,7 @@ hr::before {
 }
 
 .spacing {
-  margin: 8rem 0 0 0;
+  margin: 6rem 0;
 }
 
 blockquote {
